--- a/src/app/web-app/resource/file/file.component.scss
+++ b/src/app/web-app/resource/file/file.component.scss
@@ -33,3 +33,14 @@
     }
   }
 }
+
+.process {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 500px;
+
+  .progress {
+    width: 200px;
+  }
+}
