--- a/src/app/hub/content-workspace/content-workspace.component.scss
+++ b/src/app/hub/content-workspace/content-workspace.component.scss
@@ -73,14 +73,31 @@
   min-height: 300px;
 }
 
-//
-// .example-custom-placeholder {
-//   background: #ccc;
-//   border: dotted 3px #999;
-//   min-height: 60px;
-//   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+// .cdk-drag-placeholder {
+//   opacity: 0;
 // }
 
-.cur-mov{
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-custom-placeholder {
+  background: #ccc;
+  border: dotted 3px #999;
+  min-height: 40px;
+  min-width: 150px;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cur-mov {
   cursor: move;
 }
