--- a/src/app/user/import/import.component.html
+++ b/src/app/user/import/import.component.html
@@ -4,7 +4,7 @@
   </h3>
   <form class="container">
     <div class="custom-file-select" appFileDnd (fileDropped)="onFileDropped($event)">
-      <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)" accept="image/*">
+      <input type="file" multiple (change)="fileBrowseHandler($event)" accept="image/*">
       <div class="text-center my-5">
         <h2><i class="fa fa-upload"></i></h2>
         <h5>Drag & Drop a user data file here</h5>
