--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -1126,8 +1126,7 @@
         </mat-form-field>
         <div class="options">
           Options
-          <mat-checkbox class="d-block ml-3" formControlName="hideLabelInWorkspace">Hide label in Experience
-          </mat-checkbox>
+          <mat-checkbox class="d-block ml-3" formControlName="hideLabelInWorkspace">Hide label in Workspace</mat-checkbox>
         </div>
       </div>
       <hr *ngIf="edit">
